ganti nama file

--- a/Slide/00.pengantar.tex
+++ b/Slide/00.pengantar.tex
@@ -33,8 +33,8 @@
 
 \author{Mifta Nur Farid \\
 	miftanurfarid@lecturer.itk.ac.id}
-\title{Sinyal dan Sistem}
-\subtitle{Pengantar Sinyal \& Sistem}
+\title{TE201416: SINYAL DAN SISTEM}
+\subtitle{PENGANTAR}
 \institute{Teknik Elektro \\ Institut Teknologi Kalimantan \\ Balikpapan, Indonesia}
 \date{\tiny Februari 26, 2020}
 
