--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -4,8 +4,7 @@
 \usepackage{array,multirow,graphicx}
 \usepackage{multicol}
 \usepackage{etoolbox}
-%\graphicspath{{/directory/to/image/folder/1/}
-%              {/directory/to/image/folder/1/}}
+\graphicspath{{/home/fafaa/Documents/sinyal_dan_sistem/Slide/gambar}}
 \setbeamertemplate{caption}[numbered]
 \setbeamertemplate{section in toc}[sections numbered]
 
@@ -32,10 +31,10 @@
 
 \author{Mifta Nur Farid \\
 	miftanurfarid@lecturer.itk.ac.id}
-\title{Sinyal dan Sistem}
-\subtitle{Sistem Linear Time-Invariant}
+\title{TE201416: SINYAL DAN SISTEM}
+\subtitle{SINYAL}
 \institute{Teknik Elektro \\ Institut Teknologi Kalimantan \\ Balikpapan, Indonesia}
-\date{\tiny November 24, 2020}
+\date{\tiny Februari 26, 2020}
 
 % The log drawn in the upper right corner.
 \logo{\includegraphics[height=0.13\paperheight]{OK-LOGO-ITK.jpg}}
