--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -72,7 +72,7 @@
 		x(t) &= x(t+T_0) \qquad \text{ periode } \triangleq \text{ nilai terkecil dari } T_0 \\
 		A \cos[\omega_0 t + \phi] &= A \cos[\omega_0 t + \omega_0 T_0 + \phi] \\
 		\\
-		\omega_0 T_0 &= 2 \pi \text{m} \text{;   dimana m adalah bilangan bulat}\\ 
+		\text{syarat menghasilkan nilai yang sama} \rightarrow \omega_0 T_0 &= 2 \pi \text{; m} \text{m} \in \text{ bil. bulat}\\ 
 		T_0 &= \frac{2 \pi \text{m}}{\omega_0} \implies \text{ periode } = \frac{2 \pi}{\omega_0} \\
 	\end{align*}
 	\begin{itemize}
@@ -86,7 +86,8 @@
 	\end{itemize}
 
 	\begin{align*}
-		A \cos [\omega_0 (t + t_0) ] &= A \cos [\omega_0 t + \omega_0 t_0 ] \\
+		A \cos [\omega_0 (t + t_0) ] &= A \cos [\omega_0 t + \omega_0 t_0 ] \text{; } \omega_0 t_0 = \Delta \phi\\
+		A \cos [\omega_0 (t + t_0) + \phi ] &= A \cos [\omega_0 t + \omega_0 t_0 + \phi]
 	\end{align*}
 \end{frame}
 
@@ -97,7 +98,7 @@
 	\end{itemize}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.4\textheight]{gambar/01.sinyal_genap}
+		\includegraphics[height=0.35\textheight]{gambar/01.sinyal_genap}
 		\caption{Sifat genap dari sinyal sinusoidal}
 	\end{figure}
 	\begin{itemize}
