--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -86,7 +86,7 @@
 	\end{itemize}
 
 	\begin{align*}
-		A \cos [\omega_0 (t + t_0) ] &= A \cos [\omega_0 t + \omega_0 t_0 ] \text{; } \omega_0 t_0 = \Delta \phi\\
+		A \cos [\omega_0 (t + t_0) ] &= A \cos [\omega_0 t + \omega_0 t_0 ] \text{; } \omega_0 t_0 = \Delta \phi \\
 		A \cos [\omega_0 (t + t_0) + \phi ] &= A \cos [\omega_0 t + \omega_0 t_0 + \phi]
 	\end{align*}
 \end{frame}
@@ -94,6 +94,22 @@
 \begin{frame}{Genap (\textit{even})}
 	\begin{itemize}
 		\item Sinyal dikatakan bersifat genap (\textit{even}) jika dicerminkan pada titik nol memliki bentuk sinyal yang sama
+		\item $ \phi = 0 \implies x(t) = A \cos(\omega_0 t) $	
+	\end{itemize}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.35\textheight]{gambar/01.sinyal_genap}
+		\caption{Sifat genap dari sinyal sinusoidal}
+	\end{figure}
+	\begin{itemize}
+		\item Periodik : $ x(t) = x(t + T_0) $
+		\item Genap : $ x(t) = x(-t) $
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Ganjil (\textit{odd})}
+	\begin{itemize}
+		\item Sinyal dikatakan bersifat ganjil (\textit{odd}) jika dicerminkan pada titik nol memeliki bentuk sinyal yang berkebalikan terhadap sumbu-$ x $
 		\item $ \phi = 0 \implies x(t) = A \cos(\omega_0 t) $	
 	\end{itemize}
 	\begin{figure}
