--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -51,77 +51,14 @@
 %	\end{multicols}
 \end{frame}
 
-\section{Sinyal sinusoidal}
+\section{Sinyal sinusoidal waktu kontinu}
 \begin{frame}{Sinyal sinusoidal waktu kontinu}
-	\begin{itemize}
-		\item $ x(t) = A \cos(\omega_0 t + \phi) $
-		\item $ A $ adalah amplitudo, $ \omega_0 $ adalah frekuensi dan $ \phi $ adalah fasa.
-	\end{itemize}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.6\textheight]{gambar/01.sinyal_sinusoidal_waktu_kontinu}
-		\caption{grafik sinyal sinusoidal waktu kontinu} \label{sinusoidal}
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_01}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Periodik}
-	\begin{itemize}
-		\item Sinyal sinusoidal bersifat periodik
-	\end{itemize}
-	\begin{align*}
-		x(t) &= x(t+T_0) \qquad \text{ periode } \triangleq \text{ nilai terkecil dari } T_0 \\
-		A \cos[\omega_0 t + \phi] &= A \cos[\omega_0 t + \omega_0 T_0 + \phi] \\
-		\\
-		\text{syarat menghasilkan nilai yang sama} \rightarrow \omega_0 T_0 &= 2 \pi \text{; m} \text{m} \in \text{ bil. bulat}\\ 
-		T_0 &= \frac{2 \pi \text{m}}{\omega_0} \implies \text{ periode } = \frac{2 \pi}{\omega_0} \\
-	\end{align*}
-	\begin{itemize}
-		\item Jika kita perhatikan kembali gambar sebelumnya (Gambar \ref{sinusoidal}), maka pada periode $ \frac{2 \pi}{\omega_0} $ memiliki amplitudonya adalah sama
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{\textit{Time-shift}}
-	\begin{itemize}
-		\item \textit{Time-shift} dalam sinyal sinusoidal $ \iff $ perubahan fasa
-	\end{itemize}
-
-	\begin{align*}
-		A \cos [\omega_0 (t + t_0) ] &= A \cos [\omega_0 t + \omega_0 t_0 ] \text{; } \omega_0 t_0 = \Delta \phi \\
-		A \cos [\omega_0 (t + t_0) + \phi ] &= A \cos [\omega_0 t + \omega_0 t_0 + \phi]
-	\end{align*}
-\end{frame}
-
-\begin{frame}{Genap (\textit{even})}
-	\begin{itemize}
-		\item Sinyal dikatakan bersifat genap (\textit{even}) jika dicerminkan pada titik nol memliki bentuk sinyal yang sama
-		\item $ \phi = 0 \implies x(t) = A \cos(\omega_0 t) $	
-	\end{itemize}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.35\textheight]{gambar/01.sinyal_genap}
-		\caption{Sifat genap dari sinyal sinusoidal}
-	\end{figure}
-	\begin{itemize}
-		\item Periodik : $ x(t) = x(t + T_0) $
-		\item Genap : $ x(t) = x(-t) $
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Ganjil (\textit{odd})}
-	\begin{itemize}
-		\item Sinyal dikatakan bersifat ganjil (\textit{odd}) jika dicerminkan pada titik nol memeliki bentuk sinyal yang berkebalikan terhadap sumbu-$ x $
-		\item $ \phi = 0 \implies x(t) = A \cos(\omega_0 t) $	
-	\end{itemize}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.35\textheight]{gambar/01.sinyal_genap}
-		\caption{Sifat genap dari sinyal sinusoidal}
-	\end{figure}
-	\begin{itemize}
-		\item Periodik : $ x(t) = x(t + T_0) $
-		\item Genap : $ x(t) = x(-t) $
-	\end{itemize}
-\end{frame}
 
 \end{document}
 
