--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -191,6 +191,62 @@
 	\end{figure}
 \end{frame}
 
+\section{Unit Step \& Unit Impulse}
+\begin{frame}{Unit Step \& Unit Impulse}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_01}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Impulse Sequence}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_02}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Step Sequence}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_03}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Step Sequence}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_04}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Step Function Waktu Kontinu}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_05}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Impulse Function}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.4\textheight]{gambar/01.sinyal/02.slide_06}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Impulse Waktu Kontinu}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_07}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Unit Step Waktu Kontinu}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/02.slide_08}
+	\end{figure}
+\end{frame}
 
 \end{document}
 
