--- a/Slide/02.sistem.tex
+++ b/Slide/02.sistem.tex
@@ -51,146 +51,56 @@
 %	\end{multicols}
 \end{frame}
 
-\section{Sinyal sinusoidal waktu kontinu}
-\begin{frame}{Sinyal sinusoidal waktu kontinu}
+\section{Definisi Sistem}
+\begin{frame}{Definisi Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_01}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_09}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu kontinu}
+\section{Interkoneksi Antar Sistem}
+\begin{frame}{Interkoneksi Antar Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.7\textheight]{gambar/01.sinyal/01.slide_02_01}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_10}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu kontinu}
+\begin{frame}{Interkoneksi Antar Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_03}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_11}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu kontinu}
+\begin{frame}{Interkoneksi Antar Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_04}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_12}
 	\end{figure}
 \end{frame}
 
-\section{Sinyal sinusoidal waktu diskret}
-\begin{frame}{Sinyal sinusoidal waktu diskret}
+\section{Karakteristik Sistem}
+\begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_05}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_13}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu diskret}
+\begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.3\textheight]{gambar/01.sinyal/01.slide_06}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_14}
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu diskret}
+\begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_07}
+		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_15}
 	\end{figure}
 \end{frame}
-
-\begin{frame}{Sinyal sinusoidal waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_08}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal sinusoidal waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_09}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal sinusoidal waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_10}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal sinusoidal waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_11}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal sinusoidal waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_12}
-	\end{figure}
-\end{frame}
-
-\section{Sinyal sinusoidal saat frekuensinya berbeda}
-\begin{frame}{Sinyal sinusoidal saat frekuensinya berbeda}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_13}
-	\end{figure}
-\end{frame}
-
-\section{Sinyal eksponensial riil waktu kontinu}
-\begin{frame}{Sinyal eksponensial riil waktu kontinu}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_14}
-	\end{figure}
-\end{frame}
-
-\section{Sinyal eksponensial riil waktu diskret}
-\begin{frame}{Sinyal eksponensial riil waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_15}
-	\end{figure}
-\end{frame}
-
-\section{Sinyal eksponensial kompleks waktu kontinu}
-\begin{frame}{Sinyal eksponensial kompleks waktu kontinu}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_16}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal eksponensial kompleks waktu kontinu}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_17}
-	\end{figure}
-\end{frame}
-
-\section{Sinyal eksponensial kompleks waktu diskret}
-\begin{frame}{Sinyal eksponensial kompleks waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_18}
-	\end{figure}
-\end{frame}
-
-\begin{frame}{Sinyal eksponensial kompleks waktu diskret}
-	\begin{figure}
-		\centering
-		\includegraphics[height=0.8\textheight]{gambar/01.sinyal/01.slide_19}
-	\end{figure}
-\end{frame}
-
-
 \end{document}
 
