--- a/Slide/00.pengantar.tex
+++ b/Slide/00.pengantar.tex
@@ -55,11 +55,11 @@
 	\end{itemize}
 	\begin{multicols}{2}
 		\begin{figure}
-			\includegraphics[width=0.5\linewidth]{00.sinyal_suara}
+			\includegraphics[width=0.5\linewidth]{00.pengantar/00.sinyal_suara}
 			\caption{Sinyal suara, 1 variabel (tekanan suara terhadap waktu), \textit{one-dimensional}}
 		\end{figure}
 		\begin{figure}
-			\includegraphics[width=0.7\linewidth]{00.sinyal_gambar}
+			\includegraphics[width=0.7\linewidth]{00.pengantar/00.sinyal_gambar}
 			\caption{Gambar, 2 variabel (brightness terhadap sumbu vertikal dan horizontal), \textit{two-dimensional}}
 		\end{figure}
 	\end{multicols}
@@ -87,7 +87,7 @@
 		\columnbreak
 		\begin{figure}
 			\centering
-			\includegraphics[height=0.65\textheight]{00.representasi_grafis_dari_sinyal_waktu_kontinu_dan_diskret}
+			\includegraphics[height=0.65\textheight]{00.pengantar/00.representasi_grafis_dari_sinyal_waktu_kontinu_dan_diskret}
 			\caption{Representasi grafis dari sinyal waktu kontinu dan diskret}
 		\end{figure}
 	\end{multicols}
@@ -95,7 +95,7 @@
 
 \begin{frame}{Contoh sinyal waktu diskret}
 	\begin{figure}
-		\includegraphics[height=0.7\textheight]{00.sinyal_waktu_diskret}
+		\includegraphics[height=0.7\textheight]{00.pengantar/00.sinyal_waktu_diskret}
 		\caption{Grafik \textit{stock market index} adalah contoh sinyal waktu diskret}
 	\end{figure}
 \end{frame}
@@ -103,7 +103,7 @@
 \begin{frame}{Contoh sinyal waktu kontinu}
 
 	\begin{figure}
-		\includegraphics[height=0.7\textheight]{00.sinyal_waktu_kontinu}
+		\includegraphics[height=0.7\textheight]{00.pengantar/00.sinyal_waktu_kontinu}
 		\caption{Grafik profil kecepatan angin adalah contoh sinyal waktu kontinu}
 	\end{figure}
 \end{frame}
@@ -123,7 +123,7 @@
 		\columnbreak
 		\begin{figure}
 			\centering
-			\includegraphics[height=0.5 \textheight]{gambar/00.sistem}
+			\includegraphics[height=0.5 \textheight]{gambar/00.pengantar/00.sistem}
 			\caption{Terminologi sinyal dan sistem}
 		\end{figure}
 	\end{multicols}
@@ -132,7 +132,7 @@
 \begin{frame}{Contoh sistem diskret}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.7\textheight]{gambar/00.proses_sinyal_diskret}
+		\includegraphics[height=0.7\textheight]{gambar/00.pengantar/00.proses_sinyal_diskret}
 		\caption{Market trend}
 	\end{figure}
 \end{frame}
@@ -140,7 +140,7 @@
 \begin{frame}{Contoh sistem kontinu}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.7\textheight]{gambar/00.proses_sinyal_kontinu}
+		\includegraphics[height=0.7\textheight]{gambar/00.pengantar/00.proses_sinyal_kontinu}
 		\caption{Menghilangkan noise dari suara rekaman (gambar atas = suara dengan noise, gambar bawah = noise sudah dihilangkan)}
 	\end{figure}
 \end{frame}
@@ -149,14 +149,14 @@
 	\begin{multicols}{2}
 		\begin{figure}
 			\centering
-			\includegraphics[height=0.65\textheight]{gambar/00.foto_jalan_berawan}
+			\includegraphics[height=0.65\textheight]{gambar/00.pengantar/00.foto_jalan_berawan}
 			\caption{Foto jalan berawan}
 		\end{figure}
 		\vfill\null
 		\columnbreak
 		\begin{figure}
 			\centering
-			\includegraphics[height=0.65\textheight]{gambar/00.foto_jalan_awan_hilang}
+			\includegraphics[height=0.65\textheight]{gambar/00.pengantar/00.foto_jalan_awan_hilang}
 			\caption{Hasil pemrosesan menghilangkan awan}
 		\end{figure}
 	\end{multicols}
@@ -194,7 +194,7 @@
 		\columnbreak
 		\begin{figure}
 			\centering
-			\includegraphics[height=0.6\textheight]{gambar/00.TimeDomain}
+			\includegraphics[height=0.6\textheight]{gambar/00.pengantar/00.TimeDomain}
 			\caption{Contoh sinyal ranah waktu (atas) dan ranah frekuensi (bawah)}
 		\end{figure}
 	\end{multicols}
