--- a/Slide/01.sinyal.tex
+++ b/Slide/01.sinyal.tex
@@ -45,11 +45,11 @@
 \titlepage
 \end{frame}
 
-\begin{frame}{Bahan Kajian}
+%\begin{frame}{Bahan Kajian}
 %	\begin{multicols}{2} % Two columns for outline
-    \tableofcontents[subsectionstyle=hide]
+%    \tableofcontents[subsectionstyle=hide]
 %	\end{multicols}
-\end{frame}
+%\end{frame}
 
 \section{Sinyal sinusoidal waktu kontinu}
 \begin{frame}{Sinyal sinusoidal waktu kontinu}
