--- a/Slide/02.sistem.tex
+++ b/Slide/02.sistem.tex
@@ -32,9 +32,9 @@
 \author{Mifta Nur Farid \\
 	miftanurfarid@lecturer.itk.ac.id}
 \title{TE201416: SINYAL DAN SISTEM}
-\subtitle{SINYAL}
+\subtitle{SISTEM}
 \institute{Teknik Elektro \\ Institut Teknologi Kalimantan \\ Balikpapan, Indonesia}
-\date{\tiny Maret 5, 2020}
+\date{\tiny Februari 26, 2020}
 
 % The log drawn in the upper right corner.
 \logo{\includegraphics[height=0.13\paperheight]{OK-LOGO-ITK.jpg}}
@@ -45,11 +45,11 @@
 \titlepage
 \end{frame}
 
-\begin{frame}{Bahan Kajian}
+%\begin{frame}{Bahan Kajian}
 %	\begin{multicols}{2} % Two columns for outline
-    \tableofcontents[subsectionstyle=hide]
+%    \tableofcontents[subsectionstyle=hide]
 %	\end{multicols}
-\end{frame}
+%\end{frame}
 
 \section{Definisi Sistem}
 \begin{frame}{Definisi Sistem}
@@ -85,21 +85,21 @@
 \begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_13}
+		\includegraphics[height=0.9\textheight]{gambar/02.sistem/02.slide_13}
 	\end{figure}
 \end{frame}
 
 \begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_14}
+		\includegraphics[height=0.85\textheight]{gambar/02.sistem/02.slide_14}
 	\end{figure}
 \end{frame}
 
 \begin{frame}{Karakteristik Sistem}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{gambar/02.sistem/02.slide_15}
+		\includegraphics[height=0.85\textheight]{gambar/02.sistem/02.slide_15}
 	\end{figure}
 \end{frame}
 \end{document}
