--- a/Slide/2022/00.Pengantar/00.Pengantar.tex
+++ b/Slide/2022/00.Pengantar/00.Pengantar.tex
@@ -16,14 +16,21 @@
 
 \newcommand*{\Scale}[2][4]{\scalebox{#1}{$#2$}}%
 
-\title{SINYAL DAN SISTEM}
-\subtitle{KONTRAK PERKULIAHAN}
+\title{Sinyal dan Sistem}
+\subtitle{Pengantar}
 
-\author{mIFTA nUR fARID}
+\author{Tim Dosen Pengampu}
 
 \begin{document}
 
 \maketitle
 
+\begin{frame}
+	\frametitle{Pengantar}
+	\begin{itemize}
+		\item RPS
+		\item Ketua kelas
+	\end{itemize}
+\end{frame}
 
 \end{document}
