--- a/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
+++ b/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
@@ -286,6 +286,43 @@
 
 \begin{frame}
 	\frametitle{Sinyal genap dan sinyal ganjil}
+	\begin{itemize}
+		\item Sinyal genap
+		$$ x(-t) = x(t) $$ atau $$ x[-n] = x[n] $$
+		\item Sinyal ganjil
+		$$ x(-t) = -x(t) $$ atau $$ x[-n] = -x[n] $$
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Sinyal genap dan sinyal ganjil}
+	\begin{center}
+		\includegraphics[width=0.8\linewidth]{img/img28}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Sinyal genap dan sinyal ganjil}
+	\begin{itemize}
+		\item Setiap sinyal dapat kita pecah menjadi penjumlahan dari dua sinyal
+		\item Salah satunya adalah sinyal genap dan lainnya adalah sinyal ganjil.
+		\begin{center}
+			\includegraphics[width=0.5\linewidth]{img/img31}
+		\end{center}
+		\begin{center}
+			\includegraphics[width=0.5\linewidth]{img/img32}
+		\end{center}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Sinyal genap dan sinyal ganjil}
+	\begin{center}
+		\includegraphics[width=0.8\linewidth]{img/img29}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Sinyal genap dan sinyal ganjil}
+	\begin{center}
+		\includegraphics[height=0.8\textheight]{img/img30}
+	\end{center}
 \end{frame}
 
 \end{document}
