--- a/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
+++ b/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
@@ -282,10 +282,10 @@
 	\end{itemize}
 \end{frame}
 
-\section{Sinyal Genap dan Sinyal Ganjil}
+\section{Sinyal Genap dan Ganjil}
 
 \begin{frame}
-	\frametitle{Sinyal genap dan sinyal ganjil}
+	\frametitle{Sinyal genap dan ganjil}
 	\begin{itemize}
 		\item Sinyal genap
 		$$ x(-t) = x(t) $$ atau $$ x[-n] = x[n] $$
@@ -294,13 +294,13 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Sinyal genap dan sinyal ganjil}
+\begin{frame}{Sinyal genap dan ganjil}
 	\begin{center}
 		\includegraphics[width=0.8\linewidth]{img/img28}
 	\end{center}
 \end{frame}
 
-\begin{frame}{Sinyal genap dan sinyal ganjil}
+\begin{frame}{Sinyal genap dan ganjil}
 	\begin{itemize}
 		\item Setiap sinyal dapat kita pecah menjadi penjumlahan dari dua sinyal
 		\item Salah satunya adalah sinyal genap dan lainnya adalah sinyal ganjil.
@@ -313,16 +313,63 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Sinyal genap dan sinyal ganjil}
+\begin{frame}{Sinyal genap dan ganjil}
 	\begin{center}
 		\includegraphics[width=0.8\linewidth]{img/img29}
 	\end{center}
 \end{frame}
 
-\begin{frame}{Sinyal genap dan sinyal ganjil}
+\begin{frame}{Sinyal genap dan ganjil}
 	\begin{center}
 		\includegraphics[height=0.8\textheight]{img/img30}
 	\end{center}
+\end{frame}
+
+\section{Sinyal Eksponensial dan Sinusoidal}
+
+\begin{frame}
+	\frametitle{Sinyal eksponensial kompleks dan sinusoidal waktu kontinyu}
+	\begin{itemize}
+		\item Sinyal eksponensial kompleks waktu kontinyu
+		$$ x(t) = Ce^{at} $$ dimana $ C $ dan $ a $ adalah bilangan kompleks.
+		\item Berdasarkan parameter tersebut, eksponensial kompleks memiliki beberapa karakteristik yang berbeda.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Sinyal eksponensial real}
+	\begin{center}
+		\includegraphics[width=0.7\linewidth]{img/img33}
+	\end{center}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Sinyal eksponensial kompleks dan sinusoidal periodik}
+	\begin{itemize}
+		\item Jika $ a $: imajiner, maka
+		$$ x(t) = e^{j\omega_0 t} $$ adalah sinyal periodik
+		\item Pembuktian:\\
+		syarat sinyal periodik
+		\begin{align*}
+			e^{j\omega_0 t} &= e^{j\omega_0 (t+T)} \\
+			&= e^{j\omega_0 t} e^{j\omega_0 T}
+		\end{align*}
+		agar periodik maka $ e^{j\omega_0 T} = 1 $
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Sinyal eksponensial kompleks dan sinusoidal periodik}
+	\begin{itemize}
+		\item Jika $ a $: imajiner, maka
+		$$ x(t) = e^{j\omega_0 t} $$ adalah sinyal periodik
+		\item Pembuktian:\\
+		syarat sinyal periodik
+		\begin{align*}
+		e^{j\omega_0 t} &= e^{j\omega_0 (t+T)} \\
+		&= e^{j\omega_0 t} e^{j\omega_0 T}
+		\end{align*}
+		agar periodik maka $ e^{j\omega_0 T} = 1 $
+	\end{itemize}
 \end{frame}
 
 \end{document}
