--- a/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
+++ b/Slide/2022/01.Sinyal_dan_Sistem/01.Sinyal_dan_Sistem.tex
@@ -12,9 +12,11 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{multicol}
-\usepackage{lipsum}
 
 \newcommand*{\Scale}[2][4]{\scalebox{#1}{$#2$}}%
+
+\setbeamertemplate{caption}[numbered]
+\setbeamertemplate{section in toc}[sections numbered]
 
 \title{Sinyal dan Sistem}
 \subtitle{Sinyal dan Sistem}
