--- a/Slide/2022/00.Pengantar/00.Pengantar.tex
+++ b/Slide/2022/00.Pengantar/00.Pengantar.tex
@@ -12,7 +12,6 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{multicol}
-\usepackage{lipsum}
 
 \newcommand*{\Scale}[2][4]{\scalebox{#1}{$#2$}}%
 
@@ -20,9 +19,9 @@
 \setbeamertemplate{section in toc}[sections numbered]
 
 \title{Sinyal dan Sistem}
-\subtitle{Pengantar Sinyal dan Sistem}
+\subtitle{Bab Pengantar Sinyal dan Sistem}
 
-\author{Tim Dosen Pengampu}
+\author{Dosen Pengampu:\\Mifta Nur Farid, S.T., M.T.}
 
 \begin{document}
 
@@ -76,7 +75,7 @@
 \begin{frame}{Contoh sinyal waktu diskret}
 	\begin{figure}
 		\includegraphics[height=0.7\textheight]{img/00.sinyal_waktu_diskret}
-		\caption{Grafik \textit{stock market index} adalah contoh sinyal waktu diskret}
+		\caption{Grafik \textit{weekly stock market index} adalah contoh sinyal waktu diskret}
 	\end{figure}
 \end{frame}
 
@@ -174,4 +173,15 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Bahan Bacaan Mandiri}
+	\begin{enumerate}
+		\item Oppenheim, A. V., Willsky, A. S. \& Nawab, S. H., (1997). Signal and Systems, Second Edition. New Jersey: Prentice Hall of India.
+		\begin{itemize}
+			\item Chapter 1, p. 1
+			\item Section 1.0, Introduction, p. 1
+			\item Section 2.1, Continuous-time and Discrete-time signals, pp. 1-7
+		\end{itemize}
+	\end{enumerate}
+\end{frame}
 \end{document}
