--- a/Slide/2022/01.Sinyal_dan_Sistem_2/01.Sinyal_dan_Sistem_2.tex
+++ b/Slide/2022/01.Sinyal_dan_Sistem_2/01.Sinyal_dan_Sistem_2.tex
@@ -19,9 +19,9 @@
 \setbeamertemplate{section in toc}[sections numbered]
 
 \title{Sinyal dan Sistem}
-\subtitle{Bab Pengantar Sinyal dan Sistem}
+\subtitle{Sinyal dan Sistem}
 
-\author{Dosen Pengampu:\\Mifta Nur Farid, S.T., M.T.}
+\author{Mifta Nur Farid, S.T., M.T.}
 
 \begin{document}
 
