--- a/Slide/2022/01.Sinyal_dan_Sistem_2/01.Sinyal_dan_Sistem_2.tex
+++ b/Slide/2022/01.Sinyal_dan_Sistem_2/01.Sinyal_dan_Sistem_2.tex
@@ -21,7 +21,7 @@
 \title{Sinyal dan Sistem}
 \subtitle{Sinyal dan Sistem}
 
-\author{Mifta Nur Farid, S.T., M.T.}
+\author{Mifta Nur Farid}
 
 \begin{document}
 
